--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@element-plus/icons-vue": "^2.3.0",
     "axios": "^1.6.0",
     "element-plus": "^2.4.0",
+    "marked": "^17.0.1",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0",
     "vuedraggable": "^4.1.0"
